basic html structure

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Astro</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class='hello-world'></h1>
+    <section class="menu-bar">
+      <h1>SDG Astro Lounge</h1>
+      <ul>
+        <a>About</a>
+        <a>Contact Us</a>
+      </ul>
+    </section>
+    <section class="pic-of-the-day">
+      <h2>Explore your universe.</h2>
+      <p>copyright</p>
+    </section>
+    <section class="launches">
+      <header>Upcoming SpaceX Launches</header>
+      <!-- carousel  -->
+    </section>
+    <section class="mission-statement">
+      <h2>Our Mission Statement.</h2>
+      <p>lorem ipsum</p>
+    </section>
+    <footer>
+      <p>made with love at</p>
+      <a>
+        SDG
+      </a>
+    </footer>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
