added color styling

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     </section>
     <section class="pic-of-the-day">
       <h2>Explore your universe.</h2>
+    </section>
+    <section>
       <p>copyright</p>
     </section>
     <section class="launches">
