--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <section class="pic-of-the-day">
       <h2>Explore your universe.</h2>
     </section>
-    <section>
+    <section class="copyright">
       <p>copyright</p>
     </section>
     <section class="launches">
@@ -27,10 +27,17 @@
     </section>
     <section class="mission-statement">
       <h2>Our Mission Statement.</h2>
-      <p>lorem ipsum</p>
+      <p>
+        Ancient alien extraterrestrial origin sanskrit Annunaki, helicopter
+        heiroglyph aircraft pre-colonial aerodynamics, ancient alien theorists
+        weightless sanskrit. Star people Easter island inter-dimensional crystal
+        skull anti-gravity vimana, the answer is a resounding YES... Mainstream
+        archaelogy golden disk targeted mutation, ancient alien theorists
+        otherworldly visitors worm hole space brothers SETI space time.
+      </p>
     </section>
     <footer>
-      <p>made with love at</p>
+      <h6>made with love at</h6>
       <a>
         SDG
       </a>
