dynamically loading pic of the day as background

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <body>
     <section class="menu-bar">
       <h1>SDG Astro Lounge</h1>
-      <ul>
-        <a>About</a>
-        <a>Contact Us</a>
-      </ul>
+      <nav class="menu">
+        <a><h3>About</h3></a>
+        <a><h3>Contact Us</h3></a>
+      </nav>
     </section>
-    <section class="pic-of-the-day">
+    <section id="pic-of-the-day">
       <h2>Explore your universe.</h2>
     </section>
     <section class="copyright">
