styling edits and rationalized html tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,26 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <section class="menu-bar">
+    <header class="menu-bar">
       <h1>SDG Astro Lounge</h1>
       <nav class="menu">
         <a><h3>About</h3></a>
         <a><h3>Contact Us</h3></a>
       </nav>
-    </section>
+    </header>
     <section id="pic-of-the-day">
       <h2>Explore your universe.</h2>
     </section>
     <section class="copyright">
       <p>copyright</p>
     </section>
-    <section class="launches">
-      <header>Upcoming SpaceX Launches</header>
-      <!-- carousel  -->
+    <section class="space-x">
+      <h2>Upcoming SpaceX Launches</h2>
+    </section>
+    <section class="carousel">
+      <button class="left-arrow"></button>
+      <section class="launch-data"></section>
+      <button class="right-arrow"></button>
     </section>
     <section class="mission-statement">
       <h2>Our Mission Statement.</h2>
@@ -43,5 +47,11 @@
       </a>
     </footer>
     <script src="/main.js" charset="utf-8"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"
+      integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
