get copyright info from api

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <section id="pic-of-the-day">
       <h2>Explore your universe.</h2>
     </section>
-    <section class="copyright">
-      <p>copyright</p>
+    <section class="copyright-bar">
+      <h6 class="copyright-text"></h6>
     </section>
     <section class="space-x">
       <h2>Upcoming SpaceX Launches</h2>
