--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
       </p>
     </section>
     <footer>
-      <h6>made with love at</h6>
+      <h6>made with 💛 at</h6>
       <a>
-        SDG
+        <h6>SDG</h6>
       </a>
     </footer>
     <script src="/main.js" charset="utf-8"></script>
