--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,26 @@
       <h2>Upcoming SpaceX Launches</h2>
     </section>
     <section class="carousel">
-      <button class="left-arrow"></button>
-      <section class="launch-data"></section>
-      <button class="right-arrow"></button>
+      <button class="left-arrow"><i class="fas fa-chevron-left"></i></button>
+      <section class="launch-data">
+        <section class="launch-element">
+          <i class="fas fa-space-shuttle"></i>
+          <h3 class="launch-name">launch name</h3>
+        </section>
+        <section class="launch-element">
+          <i class="fas fa-info-circle"></i>
+          <p class="launch-description">launch description</p>
+        </section>
+        <section class="launch-element">
+          <i class="fas fa-clock"></i>
+          <p class="launch-time">countdown</p>
+        </section>
+        <section class="launch-element">
+          <i class="fas fa-map-marked-alt"></i>
+          <p class="launch-location">launch location</p>
+        </section>
+      </section>
+      <button class="right-arrow"><i class="fas fa-chevron-right"></i></button>
     </section>
     <section class="mission-statement">
       <h2>Our Mission Statement.</h2>
