edited js outline

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     </section>
     <section class="carousel">
       <button class="left-arrow"><i class="fas fa-chevron-left"></i></button>
+      <!-- this section to be dynamically created -->
       <section class="launch-data">
         <section class="launch-element">
           <i class="fas fa-space-shuttle"></i>
@@ -44,6 +45,7 @@
           <p class="launch-location">launch location</p>
         </section>
       </section>
+      <!-- t^^^^^^^^^^^ -->
       <button class="right-arrow"><i class="fas fa-chevron-right"></i></button>
     </section>
     <section class="mission-statement">
