fixed getlaunch function

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,8 @@
     </section>
     <section class="carousel">
       <button class="left-arrow"><i class="fas fa-chevron-left"></i></button>
-      <!-- this section to be dynamically created -->
       <section class="launch-data">
-        <section class="launch-element" class="name-element">
+        <!-- <section class="launch-element" class="name-element">
           <i class="fas fa-space-shuttle"></i>
           <h3 class="launch-name">launch name</h3>
         </section>
@@ -44,8 +43,8 @@
           <i class="fas fa-map-marked-alt"></i>
           <p class="launch-location">launch location</p>
         </section>
-      </section>
-      <!-- ^^^^^^^^^^^ -->
+      </section> -->
+      <!-- ^^^^^^^^^^^ dynamically filled -->
       <button class="right-arrow"><i class="fas fa-chevron-right"></i></button>
     </section>
     <section class="mission-statement">
