CSS styling; need to fix countdown function

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
       </p>
     </section>
     <footer>
-      <h6>made with 💛 at</h6>
-      <a>
-        <h6>SDG</h6>
+      <h5>made with 💛 at</h5>
+      <a href="https://suncoast.io/">
+        <h5 id="sdg-link">SDG</h5>
       </a>
     </footer>
     <script src="/main.js" charset="utf-8"></script>
