fixed nav menu background

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <header class="menu-bar">
       <h1>SDG Astro Lounge</h1>
       <nav class="menu">
-        <a><h3>About</h3></a>
-        <a><h3>Contact Us</h3></a>
+        <a class="nav-item">About</a>
+        <a class="nav-item">Contact Us</a>
       </nav>
     </header>
     <section id="pic-of-the-day">
